/*
 * Copyright (C) 2020 The Android Open Source Project
 *
 * Licensed under the Apache License, Version 2.0 (the "License");
 * you may not use this file except in compliance with the License.
 * You may obtain a copy of the License at
 *
 *      http://www.apache.org/licenses/LICENSE-2.0
 *
 * Unless required by applicable law or agreed to in writing, software
 * distributed under the License is distributed on an "AS IS" BASIS,
 * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 * See the License for the specific language governing permissions and
 * limitations under the License.
 */

syntax = "proto2";

option java_package = "com.android.timezone.location.validation.proto";
option java_multiple_files = false;

package com.android.timezone.location.validation.proto;

// A set of results where validation data differs from Android.
message KnownDifferences {
    repeated KnownDifference knownDifferences = 1;
}

// An individual result where validation data has a different result from Android.
message KnownDifference {
    required string cityName = 1;
    required uint64 s2CellId = 2;
    required Result referenceDataResult = 3;
    required Result actualResult = 4;

    required string comment = 5;
    required string type = 6;
    required string bugUri = 7;
}

// The result of a location time zone lookup.
message Result {
    repeated string isoCountryCodes = 1;
    repeated string zoneIds = 2;
}
